Uses a fork of botkit-storage-mongo

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "botkit": "^0.6.15",
-    "botkit-storage-mongo": "^1.0.6",
+    "botkit-storage-mongo": "Pabc1/botkit-storage-mongo",
     "botkit-studio-metrics": "^0.0.2",
     "cookie-parser": "^1.4.3",
     "debug": "^2.3.3",
