--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "node-env-file": "^0.1.8",
     "querystring": "^0.2.0",
     "request": "^2.79.0",
-    "wordfilter": "^0.2.6"
+    "wordfilter": "^0.2.6",
+    "axios": "^0.18.0"
   },
   "devDependencies": {},
   "repository": {
