--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "botkit": "^0.6.15",
-    "botkit-storage-mongo": "^1.0.6",
+    "botkit-storage-mongo": "Pabc1/botkit-storage-mongo",
     "botkit-studio-metrics": "^0.0.2",
     "cookie-parser": "^1.4.3",
     "debug": "^2.3.3",
@@ -18,7 +18,8 @@
     "node-env-file": "^0.1.8",
     "querystring": "^0.2.0",
     "request": "^2.79.0",
-    "wordfilter": "^0.2.6"
+    "wordfilter": "^0.2.6",
+    "axios": "^0.18.0"
   },
   "devDependencies": {},
   "repository": {
